--- a/src/app/componentes/tabla/tabla.component.html
+++ b/src/app/componentes/tabla/tabla.component.html
@@ -1,38 +1,11 @@
 <div class="container">
 
-    <mat-form-field>
-        <mat-label>Filter</mat-label>
-        <input matInput (keyup)="applyFilter($event)" #input>
-    </mat-form-field>
+    <mat-grid-list class="malla" cols="2" rowHeight="2:1">
+        <mat-grid-tile><img src="https://p4.wallpaperbetter.com/wallpaper/822/767/580/grand-theft-auto-v-michael-de-santa-gta-wallpaper-preview.jpg" alt="michael"></mat-grid-tile>
+        <mat-grid-tile><img src="https://cdn.hobbyconsolas.com/sites/navi.axelspringer.es/public/styles/480/public/media/image/2019/08/gta-v_4.jpg?itok=v7A4LJyG" alt="trevor"></mat-grid-tile>
+        <mat-grid-tile><img src="https://media.rockstargames.com/rockstargames/img/global/news/upload/actual_1380050598.jpg" alt="trevor"></mat-grid-tile>
+        <mat-grid-tile><img src="http://pm1.narvii.com/6190/cff44b5e1375f92b02412e2d9e5d1baec7ef5e86_00.jpg" alt="snorlax"></mat-grid-tile>
+      </mat-grid-list>
 
-    <table mat-table [dataSource]="dataSource">
-      
-        <ng-container matColumnDef="position">
-            <th mat-header-cell *matHeaderCellDef> No. </th>
-            <td mat-cell *matCellDef="let element"> {{element.position}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="image">
-            <th mat-header-cell *matHeaderCellDef> Image </th>
-            <td mat-cell *matCellDef="let element">
-                <img src="{{element.image}}" alt="pokemon" width="100" height="100">
-            </td>
-        </ng-container>
-
-        <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef> Name </th>
-            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="getRow(row)"></tr>
-
-        <!-- Row shown when there is no matching data. -->
-        <tr class="mat-row" *matNoDataRow>
-            <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
-        </tr>
-
-    </table>
-
-    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+   
  </div>
