--- a/src/app/componentes/header/header.component.html
+++ b/src/app/componentes/header/header.component.html
@@ -1,6 +1,6 @@
-<mat-toolbar color="primary">
+<mat-toolbar color="accent">
     <mat-toolbar-row>
-      <!-- Imagen que quieres en el header-->
-       <img src="../../../assets/images/pokedex.png" alt="pokedex" width="40" height="40" (click)="home()">
+
+       <img src="https://logos-marcas.com/wp-content/uploads/2021/03/Grand-Theft-Auto-V-GTA-5-Logo.png" alt="pokedex" width="80" height="40" (click)="home()">
     </mat-toolbar-row>
 </mat-toolbar>
