--- a/src/app/componentes/tabla/tabla.component.html
+++ b/src/app/componentes/tabla/tabla.component.html
@@ -1,10 +1,10 @@
 <div class="container">
 
     <mat-grid-list class="malla" cols="2" rowHeight="2:1">
-        <mat-grid-tile><img src="https://p4.wallpaperbetter.com/wallpaper/822/767/580/grand-theft-auto-v-michael-de-santa-gta-wallpaper-preview.jpg" alt="michael"></mat-grid-tile>
-        <mat-grid-tile><img src="https://cdn.hobbyconsolas.com/sites/navi.axelspringer.es/public/styles/480/public/media/image/2019/08/gta-v_4.jpg?itok=v7A4LJyG" alt="trevor"></mat-grid-tile>
-        <mat-grid-tile><img src="https://media.rockstargames.com/rockstargames/img/global/news/upload/actual_1380050598.jpg" alt="trevor"></mat-grid-tile>
-        <mat-grid-tile><img src="http://pm1.narvii.com/6190/cff44b5e1375f92b02412e2d9e5d1baec7ef5e86_00.jpg" alt="snorlax"></mat-grid-tile>
+        <mat-grid-tile id=1><img src="https://p4.wallpaperbetter.com/wallpaper/822/767/580/grand-theft-auto-v-michael-de-santa-gta-wallpaper-preview.jpg" alt="michael" (click)="irADescripcion(1)" ></mat-grid-tile>
+        <mat-grid-tile id=2><img src="https://cdn.hobbyconsolas.com/sites/navi.axelspringer.es/public/styles/480/public/media/image/2019/08/gta-v_4.jpg?itok=v7A4LJyG" alt="trevor" (click)="irADescripcion(2)"></mat-grid-tile>
+        <mat-grid-tile id=3><img src="https://media.rockstargames.com/rockstargames/img/global/news/upload/actual_1380050598.jpg" alt="trevor" (click)="irADescripcion(3)"></mat-grid-tile>
+        <mat-grid-tile id=4><img src="http://pm1.narvii.com/6190/cff44b5e1375f92b02412e2d9e5d1baec7ef5e86_00.jpg" alt="snorlax" (click)="irADescripcion(4)"></mat-grid-tile>
       </mat-grid-list>
 
    
