--- a/src/app/componentes/detalle/detalle.component.html
+++ b/src/app/componentes/detalle/detalle.component.html
@@ -1,18 +1,18 @@
 <mat-card class="card">
   
     <mat-card-header>
-      <img mat-card-avatar class="header-image" src="{{pokemonImg}}">
-      <mat-card-title>{{pokemon.name}}</mat-card-title>
-      <mat-card-subtitle>Nº {{pokemon.id}}</mat-card-subtitle>
+      <img mat-card-avatar class="header-image" src="{{personajes[enlace].imagen}}">
+      <mat-card-title>Nombre: {{personajes[enlace].nombre}}</mat-card-title>
+      <mat-card-subtitle> </mat-card-subtitle>
     </mat-card-header>
   
-    <img mat-card-image src="{{pokemonImg}}" alt="pokemon">
+    <img mat-card-image src="{{personajes[enlace].imagen}}" alt="personaje">
   
     <mat-card-content>
       <mat-chip-list>
-        <mat-chip color="primary">Type: {{pokemonType}}</mat-chip>
-        <mat-chip color="primary">Height: {{pokemon.height}}</mat-chip>
-        <mat-chip color="primary">Weight: {{pokemon.weight}}</mat-chip>
+        <mat-chip color="primary">Habilidades: {{personajes[enlace].habilidades}} </mat-chip>
+        <mat-chip color="primary">Peso: {{personajes[enlace].peso}} </mat-chip>
+        <mat-chip color="primary">Altura: {{personajes[enlace].altura}} </mat-chip>
       </mat-chip-list>
     </mat-card-content>
   
