--- a/src/app/componentes/tabla/tabla.component.scss
+++ b/src/app/componentes/tabla/tabla.component.scss
@@ -9,11 +9,18 @@
 
 img{
     border-radius: 4%;
-  width: 100%;
-  height: 100%;
-  padding: 2px;
+  width: 90%;
+  height: 90%;
+  
 }
 
 .malla{
     margin: 3%;
+    padding-bottom: 3%;
+
+
+}
+
+img:hover{
+    cursor: pointer;
 }
